--- a/assets/scss/pages/_index.scss
+++ b/assets/scss/pages/_index.scss
@@ -315,7 +315,8 @@
         gap: 4rem;
 
         @include md {
-            gap: 2rem;
+            gap: 1.5rem;
+            align-items: flex-end;
         }
 
         &.reverse {
@@ -338,12 +339,14 @@
                     right: 10%;
                     border-right: 1.5px solid #008080;
                     transform: rotate(-30deg);
+                    @include md {
+                        right: 20%;
+                    }
                 }
 
                 &::after {
                     left: unset;
                     right: -0.4rem;
-                    height: 9.7rem;
                 }
             }
 
@@ -389,6 +392,10 @@
             @include md {
                 width: 30%;
             }
+            @include sm {
+                width: auto;
+                height: 100px;
+            }
         }
     }
 
@@ -407,23 +414,22 @@
 
         @include md {
             font-size: 16px;
-            padding: 18px 2.2rem;
+            padding: 18px 3rem;
         }
 
         &::after {
             content: "";
             position: absolute;
             left: -0.4rem;
-            bottom: -0.4rem;
+            top: 0;
+            bottom: 0;
             max-width: 60rem;
             width: 100%;
-            height: 6.6rem;
             border: 1px solid #008080;
             border-radius: 70px;
             clip-path: inset(5px 0 0 0 round 18% 31% 33% 33% / 18% 10% 10% 13%);
 
             @include md {
-                height: 4.4rem;
                 border-radius: 999px;
             }
         }
@@ -432,15 +438,17 @@
             content: "";
             position: absolute;
             left: 10%;
-            bottom: -2.2rem;
-            width: 1.4rem;
-            height: 2rem;
+            bottom: -22px;
+            width: 14px;
+            height: 20px;
             border-left: 1.5px solid #008080;
             transform: rotate(30deg);
 
             @include md {
-                bottom: -1.6rem;
-                height: 1.4rem;
+                left: 20%;
+                width: 18px;
+                height: 26px;
+                bottom: -14px;
             }
         }
 
@@ -599,7 +607,7 @@
     }
 
     &__list {
-        margin-top: 11.4rem;
+        margin-top: 114px;
         display: grid;
         gap: 1.2rem;
 
